--- a/web app/viewe/index.html
+++ b/web app/viewe/index.html
@@ -48,6 +48,7 @@
             align-items: center;
             justify-content: center;
             font-size: 18px;
+            font: 1em sans-serif;
         }
 
         .menu {
