--- a/web app/viewe/index.html
+++ b/web app/viewe/index.html
@@ -271,29 +271,35 @@
             </div>
             <ul class="menu">
                 <li class="menu-item active">
-                    <span style="display:inline-flex;align-items:center;justify-content:center;width:20px;">
-                        <!-- Plus icon -->
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                            style="display:block;">
-                            <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                        </svg>
-                    </span>
-                    <span>New Patient</span>
+                    <a href="index.html"
+                        style="display:flex;align-items:center;gap:10px;color:inherit;text-decoration:none;width:100%;">
+                        <span style="display:inline-flex;align-items:center;justify-content:center;width:20px;">
+                            <!-- Plus icon -->
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg" style="display:block;">
+                                <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </span>
+                        <span>New Patient</span>
+                    </a>
                 </li>
                 <li class="menu-item">
-                    <span style="display:inline-flex;align-items:center;justify-content:center;width:20px;">
-                        <!-- Clipboard icon -->
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                            style="display:block;">
-                            <path d="M9 2h6a2 2 0 012 2v0a2 2 0 01-2 2h-6a2 2 0 01-2-2v0a2 2 0 012-2z"
-                                stroke="currentColor" stroke-width="1.6" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <rect x="4" y="8" width="16" height="14" rx="2" stroke="currentColor" stroke-width="1.6"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </span>
-                    <span>Medical Report</span>
+                    <a href="medical-records.html"
+                        style="display:flex;align-items:center;gap:10px;color:inherit;text-decoration:none;width:100%;">
+                        <span style="display:inline-flex;align-items:center;justify-content:center;width:20px;">
+                            <!-- Clipboard icon -->
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg" style="display:block;">
+                                <path d="M9 2h6a2 2 0 012 2v0a2 2 0 01-2 2h-6a2 2 0 01-2-2v0a2 2 0 012-2z"
+                                    stroke="currentColor" stroke-width="1.6" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <rect x="4" y="8" width="16" height="14" rx="2" stroke="currentColor" stroke-width="1.6"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </span>
+                        <span>Medical Record</span>
+                    </a>
                 </li>
             </ul>
         </div>
