--- a/web app/viewe/medical-records.html
+++ b/web app/viewe/medical-records.html
@@ -390,7 +390,7 @@
             </div>
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="index.html"
+                    <a href="medical-form.html"
                         style="display:flex;align-items:center;gap:10px;color:inherit;text-decoration:none;width:100%;">
                         <span style="display:inline-flex;align-items:center;justify-content:center;width:20px;">
                             <!-- Plus icon -->
